[gd_scene load_steps=17 format=3 uid="uid://cnt2v2j6dpvtt"]

[ext_resource type="Script" uid="uid://dyk3dcr6dhdv4" path="res://scripts/game_thing.gd" id="1_o2kkx"]
[ext_resource type="Texture2D" uid="uid://cpin1ggrd84ss" path="res://graphics/gamething.png" id="1_t4hx5"]
[ext_resource type="Texture2D" uid="uid://vo2nrjreev04" path="res://graphics/gtbutton.png" id="2_0edwa"]
[ext_resource type="Texture2D" uid="uid://dghwv576frjr5" path="res://graphics/power_indicator.png" id="3_myjua"]
[ext_resource type="Texture2D" uid="uid://cc2ipr1ljrshh" path="res://graphics/gttab.png" id="5_bdl0n"]
[ext_resource type="Script" uid="uid://dpe72hg3l4dw8" path="res://scripts/button.gd" id="6_qefvn"]
[ext_resource type="FontFile" uid="uid://dn58tg6ctf7br" path="res://font_8.tres" id="7_rcl55"]
[ext_resource type="Texture2D" uid="uid://dej3tj5dysygu" path="res://graphics/fbsticker.png" id="9_7qq6t"]
[ext_resource type="Texture2D" uid="uid://eknqk7rr0gle" path="res://graphics/powerbutton.png" id="9_ashhk"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ashhk"]
atlas = ExtResource("3_myjua")
region = Rect2(0, 0, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7j8h"]
atlas = ExtResource("3_myjua")
region = Rect2(0, 10, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_e48rs"]
atlas = ExtResource("3_myjua")
region = Rect2(0, 5, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sk2n"]
atlas = ExtResource("3_myjua")
region = Rect2(0, 15, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_ht8eb"]
atlas = ExtResource("3_myjua")
region = Rect2(0, 10, 8, 5)

[sub_resource type="AtlasTexture" id="AtlasTexture_psk24"]
atlas = ExtResource("3_myjua")
region = Rect2(0, 15, 8, 5)

[sub_resource type="SpriteFrames" id="SpriteFrames_o7j8h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ashhk")
}],
"loop": true,
"name": &"high",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7j8h")
}],
"loop": true,
"name": &"low",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e48rs")
}],
"loop": true,
"name": &"mid",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sk2n")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ht8eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psk24")
}],
"loop": true,
"name": &"very_low",
"speed": 3.0
}]

[node name="GameThing" type="Node2D"]
z_index = 90
z_as_relative = false
script = ExtResource("1_o2kkx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 64)
texture = ExtResource("1_t4hx5")

[node name="GTButton" type="Sprite2D" parent="."]
position = Vector2(0, 111)
texture = ExtResource("2_0edwa")
hframes = 2

[node name="PowerIndicator" type="AnimatedSprite2D" parent="."]
position = Vector2(16, 8)
sprite_frames = SubResource("SpriteFrames_o7j8h")
animation = &"off"
frame_progress = 0.991468

[node name="Toggle" type="Sprite2D" parent="."]
z_index = 10
z_as_relative = false
position = Vector2(-29, -6)
texture = ExtResource("5_bdl0n")
vframes = 2
script = ExtResource("6_qefvn")
metadata/_custom_type_script = "uid://dpe72hg3l4dw8"

[node name="Label" type="Label" parent="Toggle"]
offset_left = -20.0
offset_top = -2.0
offset_right = 20.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("7_rcl55")
theme_override_font_sizes/font_size = 8
text = "Show GT"
horizontal_alignment = 1

[node name="PowerButton" type="Sprite2D" parent="."]
position = Vector2(44, 104)
texture = ExtResource("9_ashhk")
hframes = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
visible = false
offset_left = -48.0
offset_top = 24.0
offset_right = 48.0
offset_bottom = 96.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(96, 72)
render_target_update_mode = 0

[node name="FBSticker" type="Sprite2D" parent="."]
position = Vector2(-55, 27)
texture = ExtResource("9_7qq6t")

[connection signal="clicked" from="Toggle" to="." method="_on_toggle_clicked"]
